outputs/main/hsevo_bpp_online_2025-08-07_18-44-47/problem_iter1_response24.txt_stdout.txt
Traceback (most recent call last):
  File "/home/dokhanhnam1199/QD/problems/bpp_online/eval.py", line 9, in <module>
    from gpt import priority_v2 as priority
  File "/home/dokhanhnam1199/QD/problems/bpp_online/gpt.py", line 3
    def priority_v2(item: float, priority_strategy="ExactFitFirst", bins_remain_cap: np.ndarray) -> np.ndarray:
                                                                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: non-default argument follows default argument
Traceback (most recent call last):
  File "/home/dokhanhnam1199/QD/problems/bpp_online/SLOC.py", line 7, in <module>
    from gpt import priority_v2 as priority
  File "/home/dokhanhnam1199/QD/problems/bpp_online/gpt.py", line 3
    def priority_v2(item: float, priority_strategy="ExactFitFirst", bins_remain_cap: np.ndarray) -> np.ndarray:
                                                                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: non-default argument follows default argument
Traceback (most recent call last):
  File "/home/dokhanhnam1199/QD/problems/bpp_online/cyclomatic_complexity.py", line 7, in <module>
    from gpt import priority_v2 as priority
  File "/home/dokhanhnam1199/QD/problems/bpp_online/gpt.py", line 3
    def priority_v2(item: float, priority_strategy="ExactFitFirst", bins_remain_cap: np.ndarray) -> np.ndarray:
                                                                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: non-default argument follows default argument
